Fix: News body overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,6 +321,7 @@ input[type="submit"]:hover{
     display: flex;
     gap: 2rem;
     padding: 0 2rem;
+    flex-wrap: wrap;
 }
 
 #sports, #entertainment{
